--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en"><head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <meta charset="utf-8">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Angular, HTML, CSS, JavaScript and TypeScript">
+  <meta name="description" content="This a tutorial website for web content creators and web application software developers">
+  <meta name="author" content="A software developer and IT consultant">
+  <meta name="robots" content="index, follow">
   <title>Learn to Build Web Applications</title>
-  <!-- <base href="/"> -->
+  <base href="/">
   <base href="/website.github.io/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>body{font-family:Roboto,Helvetica Neue,sans-serif;margin:0;padding:0}html,body{height:100%}</style><link rel="stylesheet" href="styles.0addf06ce95e2403.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.0addf06ce95e2403.css"></noscript></head>
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/webbookicon.png">
+  <style type="text/css">@font-face{font-family:'Material Icons';font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');}.material-icons{font-family:'Material Icons';font-weight:normal;font-style:normal;font-size:24px;line-height:1;letter-spacing:normal;text-transform:none;display:inline-block;white-space:nowrap;word-wrap:normal;direction:ltr;-webkit-font-feature-settings:'liga';-webkit-font-smoothing:antialiased;}</style>
+<style>html{scroll-behavior:smooth;font-size:16px}html,body{height:100%}body{font-family:Arial,Helvetica,sans-serif;margin:0;padding:0}</style><link rel="stylesheet" href="styles.9dde06e6b9da32d9.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.9dde06e6b9da32d9.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.068c312677423c57.js" type="module"></script><script src="polyfills.81ca40a298f2ec08.js" type="module"></script><script src="main.5ccb1e58e433b13e.js" type="module"></script>
+<script src="runtime.ec26a6eead87976b.js" type="module"></script><script src="polyfills.81ca40a298f2ec08.js" type="module"></script><script src="main.9f305fe064793377.js" type="module"></script>
 
 </body></html>
