--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="A software developer and IT consultant">
   <meta name="robots" content="index, follow">
   <title>Learn to Build Web Applications</title>
-  <base href="/">
+  <!-- <base href="/"> -->
   <base href="/website.github.io/">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/webbookicon.png">
   <style type="text/css">@font-face{font-family:'Material Icons';font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');}.material-icons{font-family:'Material Icons';font-weight:normal;font-style:normal;font-size:24px;line-height:1;letter-spacing:normal;text-transform:none;display:inline-block;white-space:nowrap;word-wrap:normal;direction:ltr;-webkit-font-feature-settings:'liga';-webkit-font-smoothing:antialiased;}</style>
