--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="Angular, HTML, CSS, JavaScript and TypeScript">
+  <meta name="keywords" content="Angular, HTML, CSS, and JavaScript">
   <meta name="description" content="This a tutorial website for web content creators and web application software developers">
   <meta name="author" content="A software developer and IT consultant">
   <meta name="robots" content="index, follow">
@@ -14,6 +14,6 @@
 <style>html{scroll-behavior:smooth;font-size:16px}html,body{height:100%}body{font-family:Arial,Helvetica,sans-serif;margin:0;padding:0}</style><link rel="stylesheet" href="styles.9dde06e6b9da32d9.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.9dde06e6b9da32d9.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.6241cfd430bf4133.js" type="module"></script><script src="polyfills.81ca40a298f2ec08.js" type="module"></script><script src="main.757d948e2f98f127.js" type="module"></script>
+<script src="runtime.bc78f0cca458ad00.js" type="module"></script><script src="polyfills.81ca40a298f2ec08.js" type="module"></script><script src="main.757d948e2f98f127.js" type="module"></script>
 
 </body></html>
